tenants/proposal-rh-ai/llama-stack-server-milvus-rhoai/base/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-service
  namespace: proposal-rh-ai
spec:
  ports:
    - port: 2379
      targetPort: 2379
  selector:
    app: etcd
