tenants/proposal-rh-ai/llama-stack-server-milvus-rhoai/base/milvus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: milvus-service
  namespace: proposal-rh-ai
spec:
  selector:
    app: milvus-standalone
  ports:
    - name: grpc
      port: 19530
      targetPort: 19530
    - name: http
      port: 9091
      targetPort: 9091
