tenants/proposal-rh-ai/llama-stack-server-milvus-rhoai/base/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-llama-stack
spec:
  ports:
  - name: postgresql
    nodePort: 0
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgresql-llama-stack
  sessionAffinity: None
  type: ClusterIP
