tenants/proposal-rh-ai/llama-stack-server-milvus-rhoai/base/llama-stack-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: policy-all-into-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
